[gd_scene load_steps=37 format=2]

[ext_resource path="res://src/CollisionTemplates/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Enemies/TheArchaeologist/Summons/Cobra.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/CobraSummon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/CobraMoving.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2048, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2176, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Summon",
"speed": 8.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Vanish",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 10.9765, 50.5874 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 29.9705, 8.1916 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 34.5775, 21.8855 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 35.3719, 61.5451 )

[node name="Cobra" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -64.6742 )
frames = SubResource( 28 )
animation = "Summon"
frame = 18
playing = true

[node name="MovingNeckHitBox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="MovingNeckHitBox" index="0"]
position = Vector2( -32.622, -50.9047 )
shape = SubResource( 29 )
disabled = true

[node name="MovingBodyHitBox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="MovingBodyHitBox" index="0"]
position = Vector2( 8.56404, -8.7516 )
shape = SubResource( 30 )
disabled = true

[node name="SummonSmallHitBox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="SummonSmallHitBox" index="0"]
position = Vector2( 0, -23.0383 )
shape = SubResource( 31 )
disabled = true

[node name="SummonLargeHitBox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="SummonLargeHitBox" index="0"]
position = Vector2( -4.76654, -62.8211 )
shape = SubResource( 32 )
disabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]

[editable path="MovingNeckHitBox"]

[editable path="MovingBodyHitBox"]

[editable path="SummonSmallHitBox"]

[editable path="SummonLargeHitBox"]
